[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://src/Player/States/Idle.gd" type="Script" id=3]
[ext_resource path="res://src/Player/States/Move.gd" type="Script" id=4]
[ext_resource path="res://src/Player/Skin/Skin.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Player/States/Run.gd" type="Script" id=6]
[ext_resource path="res://src/Player/States/Spawn.gd" type="Script" id=7]
[ext_resource path="res://src/Player/States/Attack.gd" type="Script" id=8]
[ext_resource path="res://src/Components/Hitbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Player/States/Roll.gd" type="Script" id=10]
[ext_resource path="res://src/Player/SwordHitbox.gd" type="Script" id=11]
[ext_resource path="res://src/Components/Hurtbox.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Shadows/MediumShadow.png" type="Texture" id=13]
[ext_resource path="res://src/Player/PlayerHurtSound.tscn" type="PackedScene" id=14]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=2]
height = 12.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.59446
height = 5.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
hurt_sound = ExtResource( 14 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( -0.5, 2 )
texture = ExtResource( 13 )

[node name="PlayerSkin" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 3 )

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Roll" type="Node" parent="StateMachine/Move"]
script = ExtResource( 10 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, -4 )

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource( 9 )]
position = Vector2( 15, 0 )
collision_mask = 8
script = ExtResource( 11 )
damage = 2

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
position = Vector2( -0.8909, -0.334087 )
shape = SubResource( 2 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 12 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -2.5 )
shape = SubResource( 3 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invivibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invivibility_ended"]
[connection signal="invivibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invivibility_started"]

[editable path="HitboxPivot/SwordHitbox"]

[editable path="Hurtbox"]
